# gloshbridge

./: pyproject.toml  readme.md  requirements.txt
gloshbridge/: __init__.py  calc.py  fast_glosh_calc_cor.py  glosh_calc_cor.py  java_outlier_compute.sh  rust_outlier_compute.sh  utils.py
gloshbridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gloshbridge/binaries/: rust_hdbscan  rust_hdbscan_mst
gloshbridge/out_java/: GLOSH score Order.txt  Settings.txt  cluster.txt
gloshbridge/tmp/: glosh_scores.csv
out_java/: Settings.txt
tests/: test_calc.py  test_glosh_bridge_python.py  test_rust_calc.py
tests/datasets/csv_files/: Aggregation.csv  Compound.csv  Flame.csv  Jain.csv  Pathbased.csv  Spiral.csv
tests/datasets/csv_with_noise/: Aggregation_with_noise.csv  Compound_with_noise.csv  Flame_with_noise.csv  Jain_with_noise.csv  Pathbased_with_noise.csv  Spiral_with_noise.csv  Spiral_with_noise_imp.csv
tests/datasets/toy/: toy.csv  toy2.csv
